# WadBot

./: README.md  install.bat  outdated.bat
wadbotgui/: Cargo.toml  build.sh
wadbotgui/src/: download.rs  main.rs
