[package]
name = "wadbotgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.6.0", features = ["tokio"] }
iced_futures = { version = "0.5.1"}
iced_native = "0.7.0"
reqwest = "0.11.13"
[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

